fix: improve dropdown menu positioning with transform and prevent screen jumping

--- a/src/App.css
+++ b/src/App.css
@@ -784,11 +784,20 @@ body {
   margin: -6px 0 0 5px;
   padding: 0;
 }
+.header__nav {
+  max-width: 290px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
 .header__pop-user-set {
   display: none;
   position: absolute;
-  top: 61px;
-  right: -50px;
+  top: 50px;
+  right: 0;
   width: 213px;
   height: 205px;
   border-radius: 10px;
@@ -798,6 +807,7 @@ body {
   padding: 34px;
   text-align: center;
   z-index: 2;
+  transform: translateX(-50%);
 }
 
 .main {
